# procycling

./: pyproject.toml
procycling/: Untitled1.ipynb  firstcycling.py  functions.py  utils.py
procycling/tools/: racescraper.py
