[tool.poetry]
name = "procycling"
version = "0.1.0"
description = ""
authors = ["Vladislav Shufinskiy <hollywood.90210@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
